--- a/src/main/resources/templates/view/add/dogAdd.html
+++ b/src/main/resources/templates/view/add/dogAdd.html
@@ -1,3 +1,4 @@
+<th:block th:unless="${session.isEmpty()}">
 <th:block th:fragment xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="button_back">
         <a class="nav-link h5" th:href="@{/view/table/dogTable}">
@@ -115,4 +116,5 @@
             todayHighlight: true
         });
     </script>
+</th:block>
 </th:block>
