--- a/src/main/resources/templates/view/edit/cellEdit.html
+++ b/src/main/resources/templates/view/edit/cellEdit.html
@@ -1,3 +1,4 @@
+<th:block th:unless="${session.isEmpty()}">
 <th:block th:fragment xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="button_back">
     <a class="nav-link h5" th:href="@{/view/table/cellTable}">
@@ -38,7 +39,7 @@
         </form>
     </div>
 </th:block>
-
+</th:block>
 <!--<a class="btn btn-danger btn-lg btn3d" th:href="@{/behavior/{id}/edit(id=*{id})}">
     Submit Behavior
 </a>-->
