--- a/src/main/resources/templates/view/edit/dogEdit.html
+++ b/src/main/resources/templates/view/edit/dogEdit.html
@@ -1,3 +1,4 @@
+<th:block th:unless="${session.isEmpty()}">
 <th:block th:fragment xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="button_back">
     <a class="nav-link h5" th:href="@{/view/table/dogTable}">
@@ -117,6 +118,7 @@
                     todayHighlight: true
                 });
             </script>
+</th:block>
 </th:block>
 
 <!--<a class="btn btn-danger btn-lg btn3d" th:href="@{/behavior/{id}/edit(id=*{id})}">
