--- a/src/main/resources/templates/view/table/cellTable.html
+++ b/src/main/resources/templates/view/table/cellTable.html
@@ -3,7 +3,7 @@
 
     <div class="table-center">
         <div class="page-header">
-            <h1>Cells</h1>
+            <h1>Dog House</h1>
         </div>
         <a class="nav-link h5" th:href="@{/view/add/cellAdd}">
             <button type="button" class="btn btn-danger btn-lg btn3d"><span
