--- a/src/main/resources/templates/view/add/reservationAdd.html
+++ b/src/main/resources/templates/view/add/reservationAdd.html
@@ -17,28 +17,37 @@
                     <label class="text-white font-weight-bold"></label>
                     <p>Client:</p>
                     <select id="showClient" name="showClient" th:field="*{client.id}" oninput="getClientDogs()">
+
                         <option value="">Please select</option>
                         <option
                                 th:each="showClient : ${allClients}"
                                 th:value="${showClient.id}"
                                 th:text="${showClient.email}"
+
+
                         ></option>
                     </select>
+                    <script th:inline="javascript" >
+                        /*<![CDATA[*/
 
-                    <script th:inline="javascript">
-                        const showClientList = /*[[${allClients}]]*/ [];
+                        var clientList = /*[[${allClients}]]*/ 'test';
+                        alert(clientList)
+                        /*]]>*/
                     </script>
+
 
                     <p>Dogs:</p>
                     <select id="dogsBox" th:field="*{dog.id}">
 
                         <script>
+
                             function getClientDogs() {
-                                const chosenShowClient = $("showClient").val();
-                                for (let i = 0; i < showClientList.length; i++) {
-                                    if (showClientList[i].id === chosenShowClient) {
+                                const clientId = Number(document.getElementById('showClient').value);
+                                let length = clientList.length
+                                for (let i = 0; i < length; i++) {
+                                    if (clientList[i].id === clientId) {
                                         $('#dogsBox option').remove();
-                                        const dogs = showClientList[i].dogs;
+                                        const dogs = clientList[i].dogs;
                                         for (let n = 0; n < dogs.length; n++) {
                                             $('#dogsBox').append($('<option>', {
                                                 value: dogs[n].id,
