--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,7 @@
+.dogsOnClient{
+    color: #2430ca;
+    line-height: 0.5;
+}
 .btnTable {
     transition: all .08s linear;
     position: relative;
@@ -33,6 +37,7 @@
     border: 0px solid #353838;
     padding: 10px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 }
 
 .button_submit{
@@ -43,7 +48,7 @@
     font-size: 20px;
     color: #353838;
 }
-.table{
+.table {
     display: block;
     max-width: 70%;
     background-color: transparent;
@@ -51,6 +56,8 @@
     border-spacing: 0;
     color: #353838;
     text-align: center;
+    padding: 0.5rem;
+
 }
 
 .footerStyle{
