--- a/src/main/resources/templates/view/edit/dogEdit.html
+++ b/src/main/resources/templates/view/edit/dogEdit.html
@@ -18,8 +18,15 @@
                 <div class="form-group">
                     <label>Dog Name:</label><br>
                     <input type="text" id="description" th:field="*{name}" placeholder="Please enter Name"/><br>
-
-                    <label class="file-label" for="fileImage">Add Image</label>
+                    <label for="date">BirthDate:</label>
+                    <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+                        <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"
+                               th:field="*{birthDate}" id="date" placeholder="Date"/>
+                        <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
+                            <div class="input-group-text"><i class="fa fa-calendar-alt"></i></div>
+                        </div>
+                    </div>
+                    <label class="file-label" for="fileImage">Image</label>
                     <div class="mb-4">
                         <input class="file-input" type="file" id="fileImage" name="fileImage">
                     </div>
@@ -30,14 +37,7 @@
                     <input type="hidden" name="imgName"  th:value="${dogDTO.imageName}"><br>
 
 
-                    <label for="date">BirthDate:</label>
-                    <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-                        <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"
-                               th:field="*{birthDate}" id="date" placeholder="Date"/>
-                        <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
-                            <div class="input-group-text"><i class="fa fa-calendar-alt"></i></div>
-                        </div>
-                    </div>
+
                     <label>Weight:</label><br>
                     <input type="text" id="description22" th:field="*{weight}" placeholder="Please enter Weight"/><br>
 
@@ -145,7 +145,3 @@
         </script>
     </th:block>
 </th:block>
-
-<!--<a class="btn btn-danger btn-lg btn3d" th:href="@{/behavior/{id}/edit(id=*{id})}">
-    Submit Behavior
-</a>-->
