--- a/src/main/resources/templates/view/edit/dogEdit.html
+++ b/src/main/resources/templates/view/edit/dogEdit.html
@@ -12,16 +12,17 @@
 
             <form class="form_add" enctype="multipart/form-data" th:action="@{{id}/edit(id=*{id})}"
                   th:method="post"
-                  th:object="${dogDTO}"
+                  th:object="${dogDTO}">
 
-            >
                 <div class="form-group">
+                    <label class="text-white font-weight-bold"></label>
                     <label>Dog Name:</label><br>
+
                     <input type="text" id="description" th:field="*{name}" placeholder="Please enter Name"/><br>
-                    <label for="date">BirthDate:</label>
+                    <label>BirthDate:</label>
                     <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
                         <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"
-                               th:field="*{birthDate}" id="date" placeholder="Date"/>
+                               th:field="*{birthDate}" id="date"/>
                         <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
                             <div class="input-group-text"><i class="fa fa-calendar-alt"></i></div>
                         </div>
@@ -95,9 +96,7 @@
             </form>
         </div>
 
-        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
         <script th:src="@{/assets/moment/moment.min.js}"></script>
         <script th:src="@{/assets/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.min.js}"></script>
         <script>
@@ -112,11 +111,13 @@
                     today: 'far fa-calendar-check-o',
                     clear: 'far fa-trash',
                     close: 'far fa-times'
-                } });
+                }
+            });
 
             $('#datetimepicker1').datetimepicker({
                 format: 'DD/MM/YYYY'
             });
+
         </script>
         <script>
             /* $(document).ready(function(){
