--- a/src/main/resources/templates/view/table/costTable.html
+++ b/src/main/resources/templates/view/table/costTable.html
@@ -44,6 +44,12 @@
                     </a></td>
                 </tr>
             </table>
+            <div th:if="${costs.totalPages > 0}" class="pagination"
+                 th:each="pageNumber : ${pageNumbers}">
+                <a th:href="@{costTable(size=${costs.size}, page=${pageNumber})}"
+                   th:text=${pageNumber}
+                   th:class="${pageNumber==costs.number + 1} ? active"></a>
+            </div>
         </div>
     </th:block>
 </th:block>
