--- a/src/main/resources/templates/view/table/InvoiceTable.html
+++ b/src/main/resources/templates/view/table/InvoiceTable.html
@@ -49,10 +49,11 @@
 
                 </tr>
                 <tr th:each="i : ${invoices}">
-                    <td th:text="${i.id}"></td>
+                    <td ><a th:href="@{/view/table/invoice/view/{id}(id=${i.id})}" th:text="${i.id}"></td>
                     <td th:text="${i.clientName +' '+ i.clientEmail +' '+i.clientPhone}"></td>
                     <td th:text="${'Dog '+ i.dogName + ' '+'House:' +i.cellCode + ' '+'Day: '+i.countStay}"></td>
-                    <td th:text="${i.reservationId}"></td>
+
+                    <td ><a th:target="_blank"  th:href="@{/view/table/reservation/view/{id}(id=${i.reservationId})}" th:text="${i.reservationId}"></td>
                     <td th:text="${i.price+'$'}"></td>
                     <td th:text="${i.discount}"></td>
                     <td th:text="${i.totalPrice +'$'}"></td>
