--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,7 +1,7 @@
 <th:block th:fragment>
 
     <nav class="navbar bg-transparent navbar-expand-lg navbar-background">
-        <a class="brand pull-left" th:href="@{/}">
+        <a class="brand pull-left" th:href="@{/view/home}">
             <span class="site-title" title="Dog Hotel Management">Dog Hotel Management</span></a>
 
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
