--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -24,7 +24,7 @@ body {
     visibility: visible; }
 
 p {
-  color: #b3b3b3;
+  color: #0d0c0c;
   font-weight: 300; }
 
 /*h1, h2, h3, h4, h5, h6,*/
