--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,9 @@
+.userName{
+    font-size: 15px;
+    color: #0ea5e9;
+    text-align: center;
+    padding-bottom: 9px;
+}
 body {
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   background-color: #fff;
@@ -39,12 +45,6 @@ a {
   a, a:hover {
     text-decoration: none !important; }
 
-.hero {
-  height: 100vh;
-  width: 100%;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat; }
 
 .top-bar {
   padding: .5rem 0;
@@ -57,7 +57,7 @@ a {
   z-index: 1999;
   position: relative;
   width: 100%;
-  padding: 1rem; }
+  padding: 0rem; }
   @media (max-width: 991.98px) {
     .site-navbar {
       padding-top: 3rem;
@@ -459,6 +459,7 @@ a {
     color: #c73131;
 }
 .table {
+
     font-size: 12px;
     display: block;
     max-width: 70%;
