--- a/src/main/resources/templates/view/edit/editUserData.html
+++ b/src/main/resources/templates/view/edit/editUserData.html
@@ -1,6 +1,6 @@
 <th:block th:fragment xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="button_back">
-        <a class="nav-link h5" th:href="@{/editPassword}">
+        <a class="nav-link h5" th:href="@{/view/home}">
             <button type="button" class="btn btn-danger btn-lg btn3d"><span
                     class="glyphicon glyphicon-ok"></span>Back
             </button>
