--- a/src/main/resources/templates/view/table/reservationView.html
+++ b/src/main/resources/templates/view/table/reservationView.html
@@ -23,17 +23,14 @@
                         </tr>
                         </tbody>
                     </table>
+
+
                     <table align="center" border="0" cellpadding="1" cellspacing="1" style="width: 500px;">
-                        <tbody>
                         <tr>
-                            <td style="width: 145px;" ><label th:text="${'Status: ' + reservation.statusReservation}"></label></td>
-
-                            <td style="width: 250px;"><label th:text="${'Date Create: '+ reservation.dateCreate}"></label></td>
+                            <td><label th:text="${'Status: ' + reservation.statusReservation}"></label></label><br>
+                            </td>
+                            <td><label th:text="${'Date Create: '+ reservation.dateCreate}"></label><br></td>
                         </tr>
-                        </tbody>
-                    </table>
-
-                    <table align="center" border="0" cellpadding="1" cellspacing="1" style="width: 500px;">
                         <tbody>
                         <tr>
                             <td><label
