--- a/src/main/resources/templates/view/table/reservationView.html
+++ b/src/main/resources/templates/view/table/reservationView.html
@@ -76,11 +76,11 @@
                         </tr>
                         </tbody>
                     </table>
-
-                    <table align="center" border="0" cellpadding="1" cellspacing="1" style="width: 500px;">
+                    <br>
+                    <table align="center" border="0" cellpadding="1" cellspacing="1" style="width: auto;">
                         <tbody>
                         <tr>
-                            <td><h5>Services:</h5><br></td>
+                            <td><h5>Services:</h5></td>
                         </tr>
                         </tbody>
                     </table>
