--- a/src/main/resources/templates/view/home.html
+++ b/src/main/resources/templates/view/home.html
@@ -69,7 +69,7 @@
                             <tr th:each="r : ${activeReservations}">
                                 <td class="h6"><a th:text="${r.id}"
                                                   th:href="@{/view/table/reservation/view/{id}(id=*{r.id})}"></td>
-                                <td th:text="${ r.client.firstName +' '+ r.client.lastName +' '+ r.client.email +' '+r.client.phone}"></td>
+                                <td ><a th:href="@{/view/table/client/view/{id}(id=${r.client.id})}"th:text="${ r.client.firstName +' '+ r.client.lastName +' '+ r.client.email +' '+r.client.phone}"></td>
                                 <td><a th:href="@{/view/table/dog/view/{id}(id=${r.dog.id})}"
                                        th:text="${r.dog.name + ' Weight:' +r.dog.weight + ' '+r.dog.breed.breedName}">
                                 </td>
@@ -96,7 +96,7 @@
                             <tr th:each="r : ${upcomingReservations}">
                                 <td class="h6"><a th:text="${r.id}"
                                                   th:href="@{/view/table/reservation/view/{id}(id=*{r.id})}"></td>
-                                <td th:text="${ r.client.firstName +' '+ r.client.lastName +' '+ r.client.email +' '+r.client.phone}"></td>
+                                <td ><a th:href="@{/view/table/client/view/{id}(id=${r.client.id})}" th:text="${ r.client.firstName +' '+ r.client.lastName +' '+ r.client.email +' '+r.client.phone}"></td>
                                 <td><a th:href="@{/view/table/dog/view/{id}(id=${r.dog.id})}"
                                        th:text="${r.dog.name + ' Weight:' +r.dog.weight + ' '+r.dog.breed.breedName}">
                                 </td>
